@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2015-07-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Applied fix
+(<a class="reference external" href="http://hg.code.sf.net/u/zacmorris/graphicsmagick/rev/edcc4c184b42">http://hg.code.sf.net/u/zacmorris/graphicsmagick/rev/edcc4c184b42</a>)
+by Zac Morris to detect buffer overrun while reading zip
+compressed data.
+(ReadMIFFImage): Fixed some memory leaks which were occuring when
+an exception was thrown from zip-compressed data reader.</li>
+</ul>
+</blockquote>
 <p>2015-07-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
